<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp"
    app:contentPaddingRight="10dp"
    app:contentPaddingLeft="10dp"
    app:cardMaxElevation="15dp"
    android:background="@drawable/grey_border"
    android:elevation="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/card_title"
            android:textColor="@color/colorDarkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:gravity="center_vertical"
            android:text="@string/author"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cardImage"
            app:layout_constraintTop_toBottomOf="@+id/cardTitle" />

        <TextView
            android:id="@+id/cardUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:gravity="center_vertical"
            android:text="@string/updated"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cardImage"
            app:layout_constraintTop_toBottomOf="@+id/cardAuthor" />

        <ProgressBar
            android:id="@+id/cardProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>